add server path to the configuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
   <string name="settings_address_summary">Domain name or IP address</string>
   <string name="settings_port_title">Server port</string>
   <string name="settings_port_summary">Tracking server TCP port</string>
+  <string name="settings_path_title">Server path</string>
+  <string name="settings_path_summary">Tracking server path without leading slash</string>
   <string name="settings_interval_title">Frequency</string>
   <string name="settings_interval_summary">Messages interval in seconds</string>
   <string name="settings_status_title">Service status</string>
